--- a/PresenterMirror/PresenterMirror-Info.plist
+++ b/PresenterMirror/PresenterMirror-Info.plist
@@ -31,6 +31,6 @@
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
-	<string>NSApplication</string>
+	<string>DHPMApplication</string>
 </dict>
 </plist>
